feat(year-winners): add page
add year winners page
allow navigation from dashboard to year winners
highlight year champion on year winners page
code cleanup

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "f1-world-champions",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --no-watch --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
